<resources>
    <string name="app_name">projetPochet</string>
    <string name="restart">Redémarrer</string>
    <string name="quit">Quitter</string>
    <string name="pPower">Puissance :</string>
    <string name="pHealth">Points de vie :</string>
    <string name="unexploredRooms">Pièces non explorées :</string>
    <string name="title">Maitre du donjon</string>
    <string name="enemy">Adversaire</string>
    <string name="attack">Attaque</string>
    <string name="flee">Fuite</string>
    <string name="resultTitle">Résultat du combat</string>
    <string name="result">En attente...</string>
    <string name="settings">Paramètres</string>
    <string name="initial_power">Puissance initiale du joueur</string>
    <string name="initial_health">Points de vie initiale du joueur</string>
    <string name="max_enemy_power">Puissance maximale des ennemis</string>
    <string name="difficulty">Difficulté</string>
    <string name="player">Joueur</string>
    <string name="toast_text">Vous avez gagné !</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="high_scores">Meilleurs scores</string>

    <string-array name="difficulty_levels">
        <item>Facile</item>
        <item>Moyen</item>
        <item>Difficile</item>
    </string-array>
</resources>