<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/roomImageButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/roomImageButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/infoLayout"
        android:layout_marginVertical="16dp">

        <ImageButton
            android:id="@+id/room1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/room16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </GridLayout>

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/resultLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roomImageButtonsLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unexploredRoomsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unexploredRooms"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/unexploredRooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playerPowerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pPower"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/playerPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playerHealthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pHealth"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/playerHealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/infoLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">
        <TextView
            android:id="@+id/resultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultTitle"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
